--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,7 +3,13 @@
 @tailwind utilities;
 
 @layer base {
-  p {
-    @apply underline;
+  h1 {
+    @apply text-gray-700 font-bold text-lg;
+  }
+  h2 {
+    @apply text-gray-700 font-bold;
+  }
+  a {
+    @apply text-blue-400;
   }
 }
