--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,7 +2,19 @@
 @tailwind components;
 
 .caution{
-    @apply text-red-600;
+  @apply text-red-600;
+}
+
+.detail_pulldown {
+  @apply text-gray-500 font-semibold underline;
+}
+
+.textarea {
+  @apply mt-1 block rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50;
+}
+
+.btn {
+  @apply bg-white hover:bg-gray-100 text-gray-800 text-sm font-medium py-1 px-2 border border-gray-400 rounded shadow;
 }
 
 @tailwind utilities;
