Searching from words to Methods is installed.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,6 +9,10 @@
   @apply text-gray-500 font-semibold underline;
 }
 
+.input {
+  @apply w-40 border border-gray-200;
+}
+
 .textarea {
   @apply mt-1 block rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50;
 }
