--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -30,7 +30,16 @@
   h2 {
     @apply text-gray-700 font-bold;
   }
+  h3 {
+    @apply text-gray-700 font-semibold text-sm;
+  }
+  h4 {
+    @apply text-gray-700 text-sm;
+  }
   a {
     @apply text-blue-400;
   }
+  p {
+    @apply whitespace-pre-wrap;
+  }  
 }
